--- a/OdysseyRegistration/OdysseyMvc4.Tests/packages.config
+++ b/OdysseyRegistration/OdysseyMvc4.Tests/packages.config
@@ -1,13 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Mvc" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Razor" version="3.3.0" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="6.0.0" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebPages" version="3.3.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net48" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net48" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net48" />
+  <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.4" targetFramework="net48" />
+  <package id="Newtonsoft.Json.Bson" version="1.0.3" targetFramework="net48" />
+  <package id="System.Buffers" version="4.6.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.6.3" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.6.3" targetFramework="net48" />
 </packages>
